begin adding code to start and stop an AS7 host controller via the maven-exec-plugin (commented out for now until it is fully functional)